--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,9 @@
-openai
-pyTelegramBotAPI
-
 services:
   - type: web
-    name: elaey-heartbot
+    name: elaey-heartbot-2
     env: python
     buildCommand: ""
-    startCommand: "python main.py"
+    startCommand: python main.py
     envVars:
-      - key: OPENAI_API_KEY
-        sync: false
       - key: TELEGRAM_BOT_TOKEN
         sync: false
